--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,9 @@
 \usepackage{mathtools}
 \usepackage{xcolor,cancel}
 \usepackage[utf8]{inputenc} 
-\usepackage{fdsymbol}
+\usepackage{amssymb}
+%\usepackage{bm}
+%\usepackage{fdsymbol}
 %\usepackage{txfonts}
 \usepackage{ntheorem}
 \usepackage{tensor}
@@ -22,6 +24,7 @@
 %\newcommand{\edal}{\end{align}}
 %\newcommand{\bgal}{\begin{align}\end{align}}
 \newcommand{\Lagr}{\mathcal{L}}
+\newcommand{\questeq}{\overset{?}{=}}
 %\newtheorem{theorem}{Theorem}
 \newtheorem{lemma}{Lemma}
 \renewcommand\thelemma{\unskip}
