--- a/main.tex
+++ b/main.tex
@@ -33,6 +33,7 @@
 \newcommand\del{\overline{\boldsymbol{{\triangledown}}}}
 \newcommand\maal{\boldsymbol{\times}}
 \newcommand\spatie{\quad\quad\quad\quad}
+\newcommand\RAr{\quad\Rightarrow\quad}
 \counterwithin*{equation}{chapter}
 \counterwithin*{equation}{section}
 \counterwithin*{equation}{subsection}
